--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Minnal Template
                         <h1 class="welcome-title animate" data-animate="fadeInUp">EMRP</h1>
                         <p class="animate" data-animate="fadeInUp">BEST ROLEPLAY SERVER</p>
                         <div class="ml-button">
-                            <a href="https://discord.gg/DuwJEHjR"  >Join Discord</a>
+                            <a href="https://discord.gg/Sv7EVMAQ"  >Join Discord</a>
                         </div>
 
 
